@@ -1,24 +1,25 @@
 [buildout]
-extends = coverage.cfg
 develop = .
+extends = coverage.cfg versions.cfg nginx.cfg
+versions = versions
 parts = test
-        nginx
+        nginx-cmd
         coverage
         coverage-test coverage-out-dir
         coverage-report coverage-report-dir
         scripts
         postgres
+        memcached
+        memcached-cmd
+
+extensions = lovely.buildouthttp
+             buildout.dumppickedversions
+dump-picked-versions-file = missing_versions.cfg
 
 [test]
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color']
 eggs = lovely.testlayers [mysql, pgsql, cassandra]
-
-[nginx]
-# this part is used to generate an nginx installation for the nginx testlayer
-recipe = hexagonit.recipe.cmmi
-url = http://sysoev.ru/nginx/nginx-0.7.62.tar.gz
-extra_options = --with-debug
 
 [scripts]
 recipe = zc.recipe.egg:script
@@ -27,4 +28,19 @@ eggs = lovely.testlayers [mysql, pgsql, cassandra]
 
 [postgres]
 recipe = hexagonit.recipe.cmmi
-url=http://ftp.at.postgresql.org/pub/postgresql/source/v8.4.7/postgresql-8.4.7.tar.gz
+url=http://ftp.postgresql.org/pub/source/v8.4.7/postgresql-8.4.7.tar.gz
+
+[ports]
+memcached = 11225
+
+[memcached]
+recipe = zc.recipe.cmmi
+url = http://memcached.googlecode.com/files/memcached-${versions:memcached}.tar.gz
+
+[memcached-cmd]
+recipe = lovely.recipe:mkfile
+path = ${buildout:bin-directory}/memcached
+mode = 0755
+command = ${memcached:location}/bin/memcached -U 0 -vv -p ${ports:memcached}
+content = #!/bin/sh
+ ${:command} $@
