@@ -1,0 +1,18 @@
+[versions]
+zc.buildout=1.6.3
+setuptools = 0.6c11
+hexagonit.recipe.cmmi = 1.5.0
+hexagonit.recipe.download = 1.6
+lovely.recipe = 1.0.0
+psycopg2 = 2.0.7
+transaction = 1.1.1
+z3c.recipe.scripts = 1.0.1
+zc.recipe.egg = 1.3.2
+zc.recipe.testrunner = 1.4.0
+z3c.coverage = 1.2.0
+zope.exceptions = 4.0.1
+zope.interface = 4.0.1
+zope.testrunner = 4.0.4
+MySQL-python=1.2.4
+zc.recipe.cmmi = 1.3.5
+memcached = 1.4.6
